syntax = "proto3";

package backup.v1beta1;

option go_package = "api/managementpb/backup;backupv1beta1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// Status shows current status of Backup.
enum Status {
  STATUS_INVALID = 0;
  PENDING = 1;
  IN_PROGRESS = 2;
  PAUSED = 3;
  SUCCESS = 4;
  ERROR = 5;
}

// Backup represents single Backup Location.
message Backup {
  // Machine-readable ID.
  string backup_id = 1;
  // Backup name
  string name = 2;
  // Database vendor e.g. PostgreSQL, MongoDB, MySQL.
  string vendor = 3;
  // Machine-readable location ID.
  string location_id = 4;
  // Backup location name.
  string location_name = 5;
  // Backup status.
  Status status = 6;
  // Backup creation time.
  google.protobuf.Timestamp created_at = 7;
}

message ListBackupsRequest {}

message ListBackupsResponse {
  repeated Backup backups = 1;
}

// Backups service provides public methods for managing Backups.
service Backups {
  // ListBackups returns a list of all backups.
  rpc ListBackups(ListBackupsRequest) returns (ListBackupsResponse) {
    option (google.api.http) = {
      post: "/v1/management/backup/Backups/List"
      body: "*"
    };
  }
}
